--- a/src/index.html
+++ b/src/index.html
@@ -5,20 +5,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>CRYOT: Plataforma de crowdfounding</title>
 </head>
 
 <body>
     <section id="nav">
         <h2>CRYOT</h2>
-        <ul>
-            <li><a href="index.html">Inicio</a></li>
-            <li><a href="#information">Información</a></li>
-            <li><a href="">Campañas</a></li>
-            <li><a href="login.html">Iniciar sesión</a></li>
-            <li><a href="signup.html">Registrarse</a></li>
-        </ul>
+            <a href="index.html"><button>Inicio</button></a>
+            <a href="#information"><button>Información</button></a>
+            <a href="campaign.html"><button>Campañas</button></a>
+            <a href="login.html"><button>Iniciar sesión</button></a>
+            <a href="signup.html"><button>Registrarse</button></a>
     </section>
+
 
     <div class="main_cointainer">
         <section id="header">
