--- a/src/index.html
+++ b/src/index.html
@@ -5,27 +5,40 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="stylesMobile.css">
     <title>CRYOT: Plataforma de crowdfounding</title>
 </head>
 
 <body>
-    <section id="nav">
-        <h2>CRYOT</h2>
-            <a href="index.html"><button>Inicio</button></a>
-            <a href="#information"><button>Información</button></a>
-            <a href="campaign.html"><button>Campañas</button></a>
-            <a href="login.html"><button>Iniciar sesión</button></a>
-            <a href="signup.html"><button>Registrarse</button></a>
-    </section>
+    <nav class="top-nav">
+        <div class ="logo">
+          CRYOT
+        </div>
+        <input id="menu-toggle" type="checkbox" />
+        <label class='menu-button-container' for="menu-toggle">
+        <div class='menu-button'></div>
+      </label>
+        <ul class="menu">
+          <li><a href="index.html">Inicio</a></li>
+          <li><a href="#information">Información</a></li>
+          <li><a href="campaign.html">Campañas</a></li>
+          <li><a href="login.html">Iniciar Sesión</a></li>
+          <li><a href="signup.html">Registrarse</a></li>
+        </ul>
+    </nav>
 
 
-    <div class="main_cointainer">
-        <section id="header">
-            <h1>CRYOT: Crypto crowdfounding</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat velit architecto hic itaque quaerat molestiae dolor sapiente vitae atque, nemo eaque laborum sit in voluptates suscipit! Ad similique quisquam reprehenderit.</p>
-            <button>Empieza ahora</button>
+    <section class="main_cointainer">
+        <section class="hero">
+            <h1 class="hero-main">Crypto crowdfounding</h1>
+            <p class="hero-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid culpa, et modi nihil nemo saepe dolorem illo ad repudiandae minus quam! In esse vitae eius beatae odio enim rerum quia!</p>
+            <button class="hero-cta">Empieza ahora</button>
         </section>
+        
 
         <section id="information">
             <img src="assets\image.png" alt="">
@@ -54,7 +67,7 @@
             <img src="assets\image.png" alt="">
             <button>Mira más campañas</button>
         </section>
-    </div>
+    </section>
 
     <section id="footer">
         <h4>CRYOT</h4>
