--- a/src/index.html
+++ b/src/index.html
@@ -40,7 +40,7 @@
         </section>
         
 
-        <section id="information">
+        <section id="information" class="centered">
             <img src="assets\image.png" alt="">
             <h3>¿Qué es CRYOT?</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum quam placeat numquam, fugit pariatur laboriosam est magni blanditiis commodi illum non, totam nihil rerum veniam quibusdam iste quaerat ratione voluptate.</p>
@@ -58,7 +58,7 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum quam placeat numquam, fugit pariatur laboriosam est magni blanditiis commodi illum non, totam nihil rerum veniam quibusdam iste quaerat ratione voluptate.</p>
         </section>
 
-        <section id="gallery">
+        <section id="gallery" class="centered">
             <img src="assets\image.png" alt="">
             <img src="assets\image.png" alt="">
             <img src="assets\image.png" alt="">
@@ -69,20 +69,27 @@
         </section>
     </section>
 
-    <section id="footer">
-        <h4>CRYOT</h4>
-        <ul>
-            <li><a href="index.html">Inicio</a></li>
-            <li><a href="#information">Información</a></li>
-            <li><a href="">Campañas</a></li>
-            <li><a href="login.html">Iniciar sesión</a></li>
-            <li><a href="signup.html">Registrarse</a></li>
-        </ul>
-        <p>Mantente informado</p>
-        <form action=""></form>
-            <input type="text" name="email" id="subscribe" placeholder="Ingrese su correo">
-        <button>Suscribirse</button>
-    </section>
+
+    <div class="footer-clean">
+        <footer>
+            <div class="container">
+                <div class="row justify-content-center">
+                    <div class="col-sm-4 col-md-3 item">
+                        <h3>CRYOT</h3>
+                        <ul>
+                            <li><a href="index.html">Inicio</a></li>
+                            <li><a href="#information">Información</a></li>
+                            <li><a href="">Campañas</a></li>
+                            <li><a href="login.html">Iniciar sesión</a></li>
+                            <li><a href="signup.html">Registrarse</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </footer>
+    </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
