--- a/src/login.html
+++ b/src/login.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <section id="nav">
+    <section id="nav" class="centered">
         <h2>CRYOT</h2>
         <ul>
             <li><a href="index.html">Inicio</a></li>
@@ -21,7 +21,7 @@
         </ul>
     </section>
 
-    <div class="login_cointainer">
+    <div class="login_cointainer centered">
         <h2>Inicia sesión</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum vitae, culpa eligendi cupiditate, velit minus distinctio deserunt est porro optio, quaerat veritatis. Totam enim officiis temporibus fugit quae aliquid velit!</p>
         <form action=""></form>
@@ -30,20 +30,26 @@
             <button type="submit">Iniciar sesión</button>
     </div>
 
-    <section id="footer">
-        <h4>CRYOT</h4>
-        <ul>
-            <li><a href="index.html">Inicio</a></li>
-            <li><a href="">Información</a></li>
-            <li><a href="">Campañas</a></li>
-            <li><a href="login.html">Iniciar sesión</a></li>
-            <li><a href="signup.html">Registrarse</a></li>
-        </ul>
-        <p>Mantente informado</p>
-        <form action=""></form>
-            <input type="text" name="email" id="subscribe" placeholder="Ingrese su correo">
-            <button type="submit">Suscribirse</button>
-    </section>
+    <div class="footer-clean">
+        <footer>
+            <div class="container">
+                <div class="row justify-content-center">
+                    <div class="col-sm-4 col-md-3 item">
+                        <h3>CRYOT</h3>
+                        <ul>
+                            <li><a href="index.html">Inicio</a></li>
+                            <li><a href="#information">Información</a></li>
+                            <li><a href="">Campañas</a></li>
+                            <li><a href="login.html">Iniciar sesión</a></li>
+                            <li><a href="signup.html">Registrarse</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </footer>
+    </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
