--- a/src/index.html
+++ b/src/index.html
@@ -32,28 +32,30 @@
     </nav>
 
 
-    <section class="main_cointainer">
-        <section class="hero">
-            <h1 class="hero-main">Crypto crowdfounding</h1>
-            <p class="hero-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid culpa, et modi nihil nemo saepe dolorem illo ad repudiandae minus quam! In esse vitae eius beatae odio enim rerum quia!</p>
-            <button class="hero-cta">Empieza ahora</button>
+    <section class="main-cointainer">
+        <section class="hero-container">
+            <section class="hero">
+                <h1 class="hero-main">Crypto crowdfounding</h1>
+                <p class="hero-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid culpa, et modi nihil nemo saepe dolorem illo ad repudiandae minus quam! In esse vitae eius beatae odio enim rerum quia!</p>
+                <button class="hero-cta">Empieza ahora</button>
+            </section>
         </section>
         
 
-        <section id="information" class="centered">
-            <img src="assets\image.png" alt="">
+        <section id="information" class="info-container centered">
+            <img src="/assets/image.png" alt="">
             <h3>¿Qué es CRYOT?</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum quam placeat numquam, fugit pariatur laboriosam est magni blanditiis commodi illum non, totam nihil rerum veniam quibusdam iste quaerat ratione voluptate.</p>
-            <img src="assets\image.png" alt="">
+            <img src="/assets/image.png" alt="">
             <h3>¿Qué hacemos?</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum quam placeat numquam, fugit pariatur laboriosam est magni blanditiis commodi illum non, totam nihil rerum veniam quibusdam iste quaerat ratione voluptate.</p>
-            <img src="assets\image.png" alt="">
+            <img src="/assets/image.png" alt="">
             <h3>¿Cómo funciona?</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum quam placeat numquam, fugit pariatur laboriosam est magni blanditiis commodi illum non, totam nihil rerum veniam quibusdam iste quaerat ratione voluptate.</p>
-            <img src="assets\image.png" alt="">
+            <img src="/assets/image.png" alt="">
             <h3>¿Cómo publicar una iniciativa?</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum quam placeat numquam, fugit pariatur laboriosam est magni blanditiis commodi illum non, totam nihil rerum veniam quibusdam iste quaerat ratione voluptate.</p>
-            <img src="assets\image.png" alt="">
+            <img src="/assets/image.png" alt="">
             <h3>¿Cómo colaborar?</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum quam placeat numquam, fugit pariatur laboriosam est magni blanditiis commodi illum non, totam nihil rerum veniam quibusdam iste quaerat ratione voluptate.</p>
         </section>
