Index initial scaffolding done

--- a/src/index.html
+++ b/src/index.html
@@ -61,12 +61,7 @@
         </section>
 
         <section id="gallery" class="centered">
-            <img src="assets\image.png" alt="">
-            <img src="assets\image.png" alt="">
-            <img src="assets\image.png" alt="">
-            <img src="assets\image.png" alt="">
-            <img src="assets\image.png" alt="">
-            <img src="assets\image.png" alt="">
+            <!-- Galeria de imagenes -->
             <button>Mira más campañas</button>
         </section>
     </section>
