Login initial scaffolding done

--- a/src/login.html
+++ b/src/login.html
@@ -31,10 +31,9 @@
         </ul>
     </nav>
 
-    <div class="login_cointainer centered">
+    <div class="login-container centered">
         <h2>Inicia sesión</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum vitae, culpa eligendi cupiditate, velit minus distinctio deserunt est porro optio, quaerat veritatis. Totam enim officiis temporibus fugit quae aliquid velit!</p>
-        <form action=""></form>
             <input type="email" name="email" id="login_email" placeholder="Ingrese el correo"><br>
             <input type="password" name="password" id="login_password" placeholder="Ingrese la contraseña"><br>
             <button type="submit">Iniciar sesión</button>
