Fix image path compatibility

--- a/src/index.html
+++ b/src/index.html
@@ -43,19 +43,19 @@
         
 
         <section id="information" class="info-container centered">
-            <img src="/assets/image.png" alt="">
+            <img src="../assets/image.png" alt="">
             <h3>¿Qué es CRYOT?</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum quam placeat numquam, fugit pariatur laboriosam est magni blanditiis commodi illum non, totam nihil rerum veniam quibusdam iste quaerat ratione voluptate.</p>
-            <img src="/assets/image.png" alt="">
+            <img src="../assets/image.png" alt="">
             <h3>¿Qué hacemos?</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum quam placeat numquam, fugit pariatur laboriosam est magni blanditiis commodi illum non, totam nihil rerum veniam quibusdam iste quaerat ratione voluptate.</p>
-            <img src="/assets/image.png" alt="">
+            <img src="../assets/image.png" alt="">
             <h3>¿Cómo funciona?</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum quam placeat numquam, fugit pariatur laboriosam est magni blanditiis commodi illum non, totam nihil rerum veniam quibusdam iste quaerat ratione voluptate.</p>
-            <img src="/assets/image.png" alt="">
+            <img src="../assets/image.png" alt="">
             <h3>¿Cómo publicar una iniciativa?</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum quam placeat numquam, fugit pariatur laboriosam est magni blanditiis commodi illum non, totam nihil rerum veniam quibusdam iste quaerat ratione voluptate.</p>
-            <img src="/assets/image.png" alt="">
+            <img src="../assets/image.png" alt="">
             <h3>¿Cómo colaborar?</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum quam placeat numquam, fugit pariatur laboriosam est magni blanditiis commodi illum non, totam nihil rerum veniam quibusdam iste quaerat ratione voluptate.</p>
         </section>
