Initial mockup design code

--- a/src/index.html
+++ b/src/index.html
@@ -14,77 +14,77 @@
 </head>
 
 <body>
-    <nav class="top-nav">
-        <div class ="logo">
-          CRYOT
-        </div>
-        <input id="menu-toggle" type="checkbox" />
-        <label class='menu-button-container' for="menu-toggle">
-        <div class='menu-button'></div>
-      </label>
-        <ul class="menu">
-          <li><a href="index.html">Inicio</a></li>
-          <li><a href="#information">Información</a></li>
-          <li><a href="campaign.html">Campañas</a></li>
-          <li><a href="login.html">Iniciar Sesión</a></li>
-          <li><a href="signup.html">Registrarse</a></li>
-        </ul>
-    </nav>
-
-
-    <section class="main-cointainer">
-        <section class="hero-container">
-            <section class="hero">
-                <h1 class="hero-main">Crypto crowdfounding</h1>
-                <p class="hero-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid culpa, et modi nihil nemo saepe dolorem illo ad repudiandae minus quam! In esse vitae eius beatae odio enim rerum quia!</p>
-                <button class="hero-cta">Empieza ahora</button>
+    <section class="page-container">
+        <nav class="top-nav">
+            <div class ="logo">
+              <img src="../assets/logo.png" alt="">
+            </div>
+            <input id="menu-toggle" type="checkbox" />
+            <label class='menu-button-container' for="menu-toggle">
+            <div class='menu-button'></div>
+          </label>
+            <ul class="menu">
+              <li><a href="index.html">Inicio</a></li>
+              <li><a href="#information">Información</a></li>
+              <li><a href="campaign.html">Campañas</a></li>
+              <li><a href="login.html">Iniciar Sesión</a></li>
+              <li><a href="signup.html">Registrarse</a></li>
+            </ul>
+        </nav>
+        <section class="main-cointainer">
+            <section class="hero-container">
+                <section class="hero">
+                    <h1 class="hero-main">Crypto crowdfounding</h1>
+                    <p class="hero-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid culpa, et modi nihil nemo saepe dolorem illo ad repudiandae minus quam! In esse vitae eius beatae odio enim rerum quia!</p>
+                    <button class="hero-cta">Empieza ahora</button>
+                </section>
+            </section>
+        
+            <section id="information" class="info-container centered">
+                <div class="info-card">
+                    <img src="../assets/image.png" alt="" class="img-card">
+                    <h3>¿Qué es CRYOT?</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum quam placeat numquam, fugit pariatur laboriosam est magni blanditiis commodi illum non, totam nihil rerum veniam quibusdam iste quaerat ratione voluptate.</p>
+                </div>
+                <div class="info-card">
+                    <img src="../assets/image.png" alt="" class="img-card">
+                    <h3>¿Qué hacemos?</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum quam placeat numquam, fugit pariatur laboriosam est magni blanditiis commodi illum non, totam nihil rerum veniam quibusdam iste quaerat ratione voluptate.</p>
+                </div>
+                <div class="info-card">
+                    <img src="../assets/image.png" alt="" class="img-card">
+                    <h3>¿Como funciona?</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum quam placeat numquam, fugit pariatur laboriosam est magni blanditiis commodi illum non, totam nihil rerum veniam quibusdam iste quaerat ratione voluptate.</p>
+                </div>
+                <div class="info-card">
+                    <img src="../assets/image.png" alt="" class="img-card">
+                    <h3>¿Como publicar una iniciativa?</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum quam placeat numquam, fugit pariatur laboriosam est magni blanditiis commodi illum non, totam nihil rerum veniam quibusdam iste quaerat ratione voluptate.</p>
+                </div>
+                <div class="info-card">
+                    <img src="../assets/image.png" alt="" class="img-card">
+                    <h3>¿Como colaborar?</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum quam placeat numquam, fugit pariatur laboriosam est magni blanditiis commodi illum non, totam nihil rerum veniam quibusdam iste quaerat ratione voluptate.</p>
+                </div>
             </section>
         </section>
-        
-
-        <section id="information" class="info-container centered">
-            <img src="../assets/image.png" alt="">
-            <h3>¿Qué es CRYOT?</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum quam placeat numquam, fugit pariatur laboriosam est magni blanditiis commodi illum non, totam nihil rerum veniam quibusdam iste quaerat ratione voluptate.</p>
-            <img src="../assets/image.png" alt="">
-            <h3>¿Qué hacemos?</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum quam placeat numquam, fugit pariatur laboriosam est magni blanditiis commodi illum non, totam nihil rerum veniam quibusdam iste quaerat ratione voluptate.</p>
-            <img src="../assets/image.png" alt="">
-            <h3>¿Cómo funciona?</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum quam placeat numquam, fugit pariatur laboriosam est magni blanditiis commodi illum non, totam nihil rerum veniam quibusdam iste quaerat ratione voluptate.</p>
-            <img src="../assets/image.png" alt="">
-            <h3>¿Cómo publicar una iniciativa?</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum quam placeat numquam, fugit pariatur laboriosam est magni blanditiis commodi illum non, totam nihil rerum veniam quibusdam iste quaerat ratione voluptate.</p>
-            <img src="../assets/image.png" alt="">
-            <h3>¿Cómo colaborar?</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum quam placeat numquam, fugit pariatur laboriosam est magni blanditiis commodi illum non, totam nihil rerum veniam quibusdam iste quaerat ratione voluptate.</p>
-        </section>
-
-        <section id="gallery" class="centered">
-            <!-- Galeria de imagenes -->
-            <button>Mira más campañas</button>
+        <section class="footer-wrapper">
+            <footer>
+                <div class ="logo">
+                    <img src="../assets/logo.png" alt="">
+                </div>
+                <div>
+                    <ul>
+                        <li><a href="index.html">Inicio</a></li>
+                        <li><a href="#information">Información</a></li>
+                        <li><a href="campaign.html">Campañas</a></li>
+                        <li><a href="login.html">Iniciar Sesión</a></li>
+                        <li><a href="signup.html">Registrarse</a></li>
+                    </ul>
+                </div>
+            </footer>
         </section>
     </section>
-
-
-    <div class="footer-clean">
-        <footer>
-            <div class="container">
-                <div class="row justify-content-center">
-                    <div class="col-sm-4 col-md-3 item">
-                        <h3>CRYOT</h3>
-                        <ul>
-                            <li><a href="index.html">Inicio</a></li>
-                            <li><a href="#information">Información</a></li>
-                            <li><a href="">Campañas</a></li>
-                            <li><a href="login.html">Iniciar sesión</a></li>
-                            <li><a href="signup.html">Registrarse</a></li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </footer>
-    </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
 </body>
