--- a/src/login.html
+++ b/src/login.html
@@ -12,51 +12,54 @@
     <link rel="stylesheet" href="stylesMobile.css">
     <title>Inicia sesión en CRYOT</title>
 </head>
-
+<style>
+</style>
 <body>
-    <nav class="top-nav">
-        <div class ="logo">
-          CRYOT
-        </div>
-        <input id="menu-toggle" type="checkbox" />
-        <label class='menu-button-container' for="menu-toggle">
-        <div class='menu-button'></div>
-      </label>
-        <ul class="menu">
-          <li><a href="index.html">Inicio</a></li>
-          <li><a href="#information">Información</a></li>
-          <li><a href="campaign.html">Campañas</a></li>
-          <li><a href="login.html">Iniciar Sesión</a></li>
-          <li><a href="signup.html">Registrarse</a></li>
-        </ul>
-    </nav>
-
-    <div class="login-container centered">
-        <h2>Inicia sesión</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum vitae, culpa eligendi cupiditate, velit minus distinctio deserunt est porro optio, quaerat veritatis. Totam enim officiis temporibus fugit quae aliquid velit!</p>
-            <input type="email" name="email" id="login_email" placeholder="Ingrese el correo"><br>
-            <input type="password" name="password" id="login_password" placeholder="Ingrese la contraseña"><br>
-            <button type="submit">Iniciar sesión</button>
-    </div>
-
-    <div class="footer-clean">
-        <footer>
-            <div class="container">
-                <div class="row justify-content-center">
-                    <div class="col-sm-4 col-md-3 item">
-                        <h3>CRYOT</h3>
-                        <ul>
-                            <li><a href="index.html">Inicio</a></li>
-                            <li><a href="#information">Información</a></li>
-                            <li><a href="">Campañas</a></li>
-                            <li><a href="login.html">Iniciar sesión</a></li>
-                            <li><a href="signup.html">Registrarse</a></li>
-                        </ul>
-                    </div>
-                </div>
+    <section class="login-wrapper">
+        <nav class="top-nav">
+            <div class ="logo">
+              <img src="../assets/logo.png" alt="">
             </div>
-        </footer>
-    </div>
+            <input id="menu-toggle" type="checkbox" />
+            <label class='menu-button-container' for="menu-toggle">
+            <div class='menu-button'></div>
+          </label>
+            <ul class="menu">
+              <li><a href="index.html">Inicio</a></li>
+              <li><a href="#information">Información</a></li>
+              <li><a href="campaign.html">Campañas</a></li>
+              <li><a href="login.html">Iniciar Sesión</a></li>
+              <li><a href="signup.html">Registrarse</a></li>
+            </ul>
+        </nav>
+        <section class="login-container centered">
+            <div class="login-card">
+                <div class="login-description">
+                    <h2>Inicia sesión</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum vitae, culpa eligendi cupiditate, velit minus distinctio deserunt est porro optio.
+                </div>
+                <input type="email" name="email" id="login_email" placeholder="Ingrese el correo"><br>
+                <input type="password" name="password" id="login_password" placeholder="Ingrese la contraseña"><br>
+                <button type="submit" class="hero-cta">Iniciar sesión</button>
+            </div>
+        </section>
+        <section class="footer-wrapper">
+            <footer>
+                <div class ="logo">
+                    <img src="../assets/logo.png" alt="">
+                </div>
+                <div>
+                    <ul>
+                        <li><a href="index.html">Inicio</a></li>
+                        <li><a href="#information">Información</a></li>
+                        <li><a href="campaign.html">Campañas</a></li>
+                        <li><a href="login.html">Iniciar Sesión</a></li>
+                        <li><a href="signup.html">Registrarse</a></li>
+                    </ul>
+                </div>
+            </footer>
+        </section>
+    </section>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
 </body>
