--- a/src/signup.html
+++ b/src/signup.html
@@ -5,48 +5,64 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="stylesMobile.css">
     <title>Registrarse en CRYOT</title>
 </head>
-
+<style>
+</style>
 <body>
-    <section id="nav">
-        <h2>CRYOT</h2>
-        <ul>
-            <li><a href="index.html">Inicio</a></li>
-            <li><a href="">Información</a></li>
-            <li><a href="">Campañas</a></li>
-            <li><a href="login.html">Iniciar sesión</a></li>
-            <li><a href="signup.html">Registrarse</a></li>
-        </ul>
+    <section class="login-wrapper">
+        <nav class="top-nav">
+            <div class ="logo">
+              <img src="../assets/logo.png" alt="">
+            </div>
+            <input id="menu-toggle" type="checkbox" />
+            <label class='menu-button-container' for="menu-toggle">
+            <div class='menu-button'></div>
+          </label>
+            <ul class="menu">
+              <li><a href="index.html">Inicio</a></li>
+              <li><a href="#information">Información</a></li>
+              <li><a href="campaign.html">Campañas</a></li>
+              <li><a href="login.html">Iniciar Sesión</a></li>
+              <li><a href="signup.html">Registrarse</a></li>
+            </ul>
+        </nav>
+        <section class="login-container centered">
+            <div class="login-card">
+                <div class="login-description">
+                    <h2>Registrarse</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum vitae, culpa eligendi cupiditate, velit minus distinctio deserunt est porro optio.
+                </div>
+                <input type="text" name="name" id="register_name" placeholder="Ingrese su nombre"><br>
+                <input type="email" name="email" id="register_email" placeholder="Ingrese el correo"><br>
+                <input type="password" name="password" id="register_password" placeholder="Ingrese la contraseña"><br>
+                <button type="submit" class="hero-cta">Iniciar sesión</button>
+            </div>
+        </section>
+        <section class="footer-wrapper">
+            <footer>
+                <div class ="logo">
+                    <img src="../assets/logo.png" alt="">
+                </div>
+                <div>
+                    <ul>
+                        <li><a href="index.html">Inicio</a></li>
+                        <li><a href="#information">Información</a></li>
+                        <li><a href="campaign.html">Campañas</a></li>
+                        <li><a href="login.html">Iniciar Sesión</a></li>
+                        <li><a href="signup.html">Registrarse</a></li>
+                    </ul>
+                </div>
+            </footer>
+        </section>
     </section>
-
-    <div class="signup_cointainer">
-        <h2>Registrarse</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum vitae, culpa eligendi cupiditate, velit minus distinctio deserunt est porro optio, quaerat veritatis. Totam enim officiis temporibus fugit quae aliquid velit!</p>
-        <form action=""></form>
-            <input type="text" name="name" id="name" placeholder="Ingrese su nombre"><br>
-            <input type="email" name="email" id="login_email" placeholder="Ingrese su correo"><br>
-            <input type="password" name="password" id="login_password" placeholder="Ingrese la contraseña"><br>
-            <button type="submit">Iniciar sesión</button>
-        <p>Registrandose acepta términos y condiciones</p>
-
-    </div>
-
-    <section id="footer">
-        <h4>CRYOT</h4>
-        <ul>
-            <li><a href="index.html">Inicio</a></li>
-            <li><a href="">Información</a></li>
-            <li><a href="">Campañas</a></li>
-            <li><a href="login.html">Iniciar sesión</a></li>
-            <li><a href="signup.html">Registrarse</a></li>
-        </ul>
-        <p>Mantente informado</p>
-        <form action=""></form>
-            <input type="text" name="email" id="subscribe" placeholder="Ingrese su correo">
-            <button type="submit">Suscribirse</button>
-    </section>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
