--- a/src/campaign.html
+++ b/src/campaign.html
@@ -5,17 +5,85 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="stylesMobile.css">
     <title>CAMPAÑAS</title>
 </head>
 
-<BODY>
-    <section id="campaign">
-        <img src="assets\image.png" alt="">
-        <img src="assets\image.png" alt="">
-        <img src="assets\image.png" alt="">
-        <img src="assets\image.png" alt="">
-        <img src="assets\image.png" alt="">
-        <img src="assets\image.png" alt="">
+<body>
+    <nav class="top-nav">
+        <div class ="logo">
+          <img src="../assets/logo.png" alt="">
+        </div>
+        <input id="menu-toggle" type="checkbox" />
+        <label class='menu-button-container' for="menu-toggle">
+        <div class='menu-button'></div>
+      </label>
+        <ul class="menu">
+          <li><a href="index.html">Inicio</a></li>
+          <li><a href="#information">Información</a></li>
+          <li><a href="campaign.html">Campañas</a></li>
+          <li><a href="login.html">Iniciar Sesión</a></li>
+          <li><a href="signup.html">Registrarse</a></li>
+        </ul>
+    </nav>
+    <section class="main-cointainer">
+        <section class="hero-container">
+            <section class="hero">
+                <h1 class="hero-main">Campañas a apoyar</h1>
+                <p class="hero-description">Mira las campañas activas a apoyar</p>
+            </section>
+        </section>
+        <section id="Campañas" class="info-container centered">
+            <div class="info-card">
+                <img src="../assets/image.png" alt="" class="img-card">
+                <h3>Campaña 1</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum quam placeat numquam, fugit pariatur laboriosam est magni blanditiis commodi illum non, totam nihil rerum veniam quibusdam iste quaerat ratione voluptate.</p>
+            </div>
+            <div class="info-card">
+                <img src="../assets/image.png" alt="" class="img-card">
+                <h3>Campaña 2</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum quam placeat numquam, fugit pariatur laboriosam est magni blanditiis commodi illum non, totam nihil rerum veniam quibusdam iste quaerat ratione voluptate.</p>
+            </div>
+            <div class="info-card">
+                <img src="../assets/image.png" alt="" class="img-card">
+                <h3>Campaña 3</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum quam placeat numquam, fugit pariatur laboriosam est magni blanditiis commodi illum non, totam nihil rerum veniam quibusdam iste quaerat ratione voluptate.</p>
+            </div>
+            <div class="info-card">
+                <img src="../assets/image.png" alt="" class="img-card">
+                <h3>Campaña 4</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum quam placeat numquam, fugit pariatur laboriosam est magni blanditiis commodi illum non, totam nihil rerum veniam quibusdam iste quaerat ratione voluptate.</p>
+            </div>
+            <div class="info-card">
+                <img src="../assets/image.png" alt="" class="img-card">
+                <h3>Campaña 5</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum quam placeat numquam, fugit pariatur laboriosam est magni blanditiis commodi illum non, totam nihil rerum veniam quibusdam iste quaerat ratione voluptate.</p>
+            </div>
+            <div class="info-card">
+                <img src="../assets/image.png" alt="" class="img-card">
+                <h3>Campaña 6</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum quam placeat numquam, fugit pariatur laboriosam est magni blanditiis commodi illum non, totam nihil rerum veniam quibusdam iste quaerat ratione voluptate.</p>
+            </div>
+        </section>
+        <section class="footer-wrapper">
+            <footer>
+                <div class ="logo">
+                    <img src="../assets/logo.png" alt="">
+                </div>
+                <div>
+                    <ul>
+                        <li><a href="index.html">Inicio</a></li>
+                        <li><a href="#information">Información</a></li>
+                        <li><a href="campaign.html">Campañas</a></li>
+                        <li><a href="login.html">Iniciar Sesión</a></li>
+                        <li><a href="signup.html">Registrarse</a></li>
+                    </ul>
+                </div>
+            </footer>
+        </section>
     </section>
-</BODY>
+</body>
