--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
             </label>
             <ul class="menu">
             <li><a href="index.html">Inicio</a></li>
-            <li><a href="#information">Información</a></li>
+            <li><a href="index.html#information">Información</a></li>
             <li><a href="campaign.html">Campañas</a></li>
             <li><a href="login.html">Iniciar Sesión</a></li>
             <li><a href="signup.html">Registrarse</a></li>
