--- a/src/login.html
+++ b/src/login.html
@@ -39,8 +39,8 @@
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum vitae, culpa eligendi cupiditate, velit minus distinctio deserunt est porro optio.
                 </div>
                 <form id="login-form">
-                    <input type="email" name="email" id="login_email" placeholder="Ingrese el correo"><br>
-                    <input type="password" name="password" id="login_password" placeholder="Ingrese la contraseña"><br>
+                    <input type="email" name="email" id="login_email" placeholder="Ingrese el correo">
+                    <input type="password" name="password" id="login_password" placeholder="Ingrese la contraseña">
                     <button type="submit" class="hero-cta">Iniciar sesión</button>
                 </form>
             </div>
